# VkApi2

./: .gitignore  Cargo.toml  readme.md  tea.yaml
src/: error.rs  lib.rs  param_grid.rs
src/account/: methods.rs  types.rs
src/apps/: methods.rs
src/board/: methods.rs
src/calls/: methods.rs
src/docs/: methods.rs  types.rs
src/donut/: methods.rs
src/fave/: methods.rs  types.rs
src/friends/: methods.rs  mod.rs  types.rs
src/gifts/: methods.rs  types.rs
src/groups/: methods.rs  types.rs
src/likes/: methods.rs  types.rs
src/market/: methods.rs
src/messages/: methods.rs  types.rs
src/notes/: methods.rs  types.rs
src/orders/: methods.rs  mod.rs
src/photos/: methods.rs  types.rs
src/podcasts/: methods.rs  types.rs
src/polls/: mod.rs
src/status/: methods.rs  types.rs
src/stories/: methods.rs
src/streaming/: methods.rs  types.rs
src/translations/: methods.rs  types.rs
src/users/: methods.rs  mod.rs  types.rs
src/utils/: methods.rs  types.rs
src/wall/: methods.rs
